--- a/src/app/components/admin-item-component/admin-item-component.component.scss
+++ b/src/app/components/admin-item-component/admin-item-component.component.scss
@@ -37,6 +37,7 @@
   mat-grid-tile-footer {
     background-color: #cebcbd;
     color: black;
+    text-transform: capitalize;
 
     span {
       font-weight: 700;
