--- a/src/app/pages/history-page/history-page.component.scss
+++ b/src/app/pages/history-page/history-page.component.scss
@@ -46,8 +46,11 @@
 
     .basket-header {
       padding: 15px 25px;
-      background-color: #c6141b;
-      color: white;
+      // background-color: #c6141b;
+      // background-color: #c46065;
+      background-color: #cebcbd;
+      // color: white;
+      color: rgb(91, 91, 91);
       border-radius: 25px;
       max-width: 100%;
       display: flex;
