--- a/src/app/pages/category-page/category-page.component.scss
+++ b/src/app/pages/category-page/category-page.component.scss
@@ -31,16 +31,17 @@
 
     .search {
       margin-top: 15px;
+      // margin-right: 15px;
       display: flex;
       align-items: center;
       height: 50px;
 
-      .opened {
+      #opened {
         border-bottom-left-radius: 0px;
         border-top-left-radius: 0px;
       }
 
-      mat-icon {
+      .search-mat-icon {
         margin-right: 15px;
         display: flex;
         border-radius: 50%;
@@ -58,6 +59,47 @@
       .order-icon {
         position: relative;
       }
+      .sort-options {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        margin-right: 3px;
+
+        .chosen {
+          background-color: #c6141b;
+          // border: none;
+          color: white;
+        }
+
+        li {
+          cursor: pointer;
+          margin: 0px 7px;
+          padding: 5px 15px;
+          color: white;
+          border-radius: 25px;
+          font-weight: 500;
+          text-transform: uppercase;
+          letter-spacing: 2px;
+          font-size: 10px;
+          border: 3px solid #c6141b;
+          color: #c6141b;
+          user-select: none;
+
+          display: flex;
+          align-items: center;
+
+          mat-icon {
+            font-size: 25px;
+            width: 25px;
+            height: 25px;
+          }
+
+          fa-icon {
+            font-size: 16px;
+          }
+        }
+      }
+
       .order-wrapper {
         height: 50px;
         margin-right: 15px;
