--- a/src/app/pages/user-page/user-page.component.scss
+++ b/src/app/pages/user-page/user-page.component.scss
@@ -21,7 +21,9 @@
     }
 
     h2 {
-      // width: 95.5%;
+      // width: 92%
+      // width: 564px;
+      // max-width: 620px;
       padding: 15px 25px;
       text-transform: uppercase;
       font-weight: 300;
@@ -83,6 +85,11 @@
       .invalid-feedback {
         color: white;
       }
+
+      // h2 {
+      //   box-sizing: initial;
+      //   border-right: 10px solid #987576;
+      // }
     }
 
     .password-form {
