--- a/src/app/components/admin-modal-dialog/admin-category/admin-category.component.scss
+++ b/src/app/components/admin-modal-dialog/admin-category/admin-category.component.scss
@@ -67,6 +67,7 @@
       width: 85%;
 
       label {
+        color: black;
         display: block;
         font-weight: 700;
         margin-bottom: 10px;
@@ -88,10 +89,8 @@
         margin: 0 15px;
         padding: 12px 17px;
         cursor: pointer;
-        // background-color: #c6141b;
         background-color: #cebcbd;
         color: black;
-        // color: white;
         border: none;
         width: 40%;
         font-weight: 500;
