--- a/src/app/components/admin-modal-dialog/admin-product/admin-product.component.scss
+++ b/src/app/components/admin-modal-dialog/admin-product/admin-product.component.scss
@@ -78,9 +78,7 @@
         line-height: 35px;
         height: 65px;
         font-weight: 300;
-        // background-color: #c6141b;
         background-color: #cebcbd;
-        // color: white;
         color: black;
         font-size: 30px;
       }
@@ -101,6 +99,7 @@
           width: 85%;
 
           label {
+            color: black;
             display: block;
             font-weight: 700;
             margin-bottom: 10px;
@@ -122,10 +121,8 @@
             margin: 0 15px;
             padding: 12px 17px;
             cursor: pointer;
-            // background-color: #c6141b;
             background-color: #cebcbd;
             color: black;
-            // color: white;
             border: none;
             width: 40%;
             font-weight: 500;
