--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -18,7 +18,7 @@
         <h2>Total</h2>
         <h1>${{ basket.commonPrice }}</h1>
       </div>
-      <button class="basket-done-button" (click)="closeWindow()">
+      <button class="basket-done-button">
         <a routerLink="/basket">Done</a>
       </button>
     </div>
