--- a/src/app/pages/history-page/history-page.component.scss
+++ b/src/app/pages/history-page/history-page.component.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: row;
   font-family: "Roboto", sans-serif;
-  // margin-bottom: 150px;
 }
 
 .main {
@@ -14,9 +13,12 @@
   padding: 15px 0;
 
   h1 {
-    margin: 25px 0;
-    font-size: 50px;
-    font-weight: 300;
+    padding: 25px 0;
+    font-size: 40px;
+    font-weight: 500;
+    color: rgb(52, 52, 52);
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   #noBaskets {
@@ -46,17 +48,14 @@
 
     .basket-header {
       padding: 15px 25px;
-      // background-color: #c6141b;
-      // background-color: #c46065;
       background-color: #cebcbd;
-      // color: white;
       color: rgb(91, 91, 91);
       border-radius: 25px;
       max-width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 50px 0 25px;
+      margin: 25px 0;
       user-select: none;
       cursor: pointer;
 
@@ -80,46 +79,54 @@
     }
 
     mat-grid-list {
-      margin: 15px 0;
+      margin: 0px 0 50px;
 
       mat-grid-tile {
-        border: 1px solid black;
+        border: 1px solid #cebcbd;
       }
 
       .ingredient-list {
-        // list-style: none;
+        list-style-type: disc;
         width: 100%;
         height: 70%;
 
         h4 {
           margin: 0px;
-          font-weight: 300;
+          font-weight: 500;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          font-size: 11px;
 
           span {
-            font-size: 12px;
+            font-weight: 300;
+            font-size: 10px;
           }
-          // text-decoration: underline;
         }
       }
 
       mat-grid-tile-footer {
-        height: 85px;
+        height: 60px;
         padding: 5px 20px;
-        flex-direction: column;
-        align-items: flex-start;
-        background-color: #cebcbd;
+        display: flex;
+        align-items: center;
+        background-color: #e2dcdc;
 
         h2 {
-          padding: 15px 0px 3px;
+          padding: 6px 0px;
           font-size: 22px;
-          width: 100%;
+          width: 90%;
           color: black;
-          font-weight: 500;
+          font-weight: 300;
           border-bottom: 1px solid black;
           margin-bottom: 5px;
 
-          span {
-            font-weight: 300;
+          .price {
+            font-weight: 500;
+          }
+
+          .amount {
+            font-weight: 700;
+            font-size: 28px;
           }
         }
 
