--- a/src/app/pages/user-page/user-page.component.scss
+++ b/src/app/pages/user-page/user-page.component.scss
@@ -80,7 +80,8 @@
       }
     }
 
-    .main-form {
+    .main-form,
+    .password-form {
       border: 4px solid #c6141b;
       border-top: 8px solid #c6141b;
       border-right: 8px solid #c6141b;
@@ -96,17 +97,17 @@
       }
     }
 
-    .password-form {
-      border: 4px solid #cebcbd;
-      border-top: 8px solid #cebcbd;
-      border-right: 8px solid #cebcbd;
+    // .password-form {
+    //   border: 4px solid #cebcbd;
+    //   border-top: 8px solid #cebcbd;
+    //   border-right: 8px solid #cebcbd;
 
-      h2,
-      button,
-      .invalid-feedback {
-        background-color: #cebcbd;
-      }
-    }
+    //   h2,
+    //   button,
+    //   .invalid-feedback {
+    //     background-color: #cebcbd;
+    //   }
+    // }
 
     .logout-button {
       background-color: #c6141b;
